a11y fixes, load js asset only once, fix spacing in drawer

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -61,6 +61,10 @@
   align-items: center;
 }
 
+.drawer__heading {
+  margin: 1rem 0;
+}
+
 .drawer__close {
   display: inline-block;
   padding: 0;
@@ -68,13 +72,9 @@
   min-height: 4.4rem;
   box-shadow: 0 0 0 0.2rem rgba(var(--color-button), 0);
   position: absolute;
-  top: 2rem;
-  right: 2rem;
-  z-index: 3;
-}
-
-.drawer__header .drawer__close {
+  top: 10px;
   right: 0;
+  z-index: 3;
 }
 
 .drawer__close svg {
@@ -160,7 +160,7 @@ cart-drawer {
   width: 100%;
   position: -webkit-sticky;
   position: sticky;
-  top: 101px; /* Might need to look into using something else than a hard coded value */
+  top: 81px; /* Might need to look into using something else than a hard coded value */
   z-index: 2;
   background-color: rgb(var(--color-base-background-1));
 }
